<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_contact_etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:padding="6dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_contact_etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="6dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_contact_etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="6dp"
                    android:singleLine="true" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/activity_contact_etContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/content"
                    android:minHeight="148dp"
                    android:padding="6dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_contact_tvCommit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_commit"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:minWidth="72dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@anim/touch_raise"
                    android:text="@string/commit"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/activity_contact_pb"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:padding="4dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/activity_contact_tvErr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/commit_err"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/activity_contact_tvOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/commit_ok"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>